// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a large icon 1`] = `
<ArrowDown
  className="Icon Icon--large Icon--primary"
  data-test-id="cf-ui-icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`renders as a "muted" icon 1`] = `
<ArrowDown
  className="Icon Icon--large Icon--muted"
  data-test-id="cf-ui-icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`renders as a "negative" icon 1`] = `
<ArrowDown
  className="Icon Icon--large Icon--negative"
  data-test-id="cf-ui-icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`renders as a "positive" icon 1`] = `
<ArrowDown
  className="Icon Icon--large Icon--positive"
  data-test-id="cf-ui-icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`renders as a "primary" icon 1`] = `
<ArrowDown
  className="Icon Icon--large Icon--primary"
  data-test-id="cf-ui-icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`renders as a "secondary" icon 1`] = `
<ArrowDown
  className="Icon Icon--large Icon--secondary"
  data-test-id="cf-ui-icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`renders as a "warning" icon 1`] = `
<ArrowDown
  className="Icon Icon--large Icon--warning"
  data-test-id="cf-ui-icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`renders as a "white" icon 1`] = `
<ArrowDown
  className="Icon Icon--large Icon--white"
  data-test-id="cf-ui-icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`renders the component 1`] = `
<ArrowDown
  className="Icon Icon--small Icon--primary"
  data-test-id="cf-ui-icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`renders the component with an additional class name 1`] = `
<ArrowDown
  className="Icon Icon--small Icon--primary my-extra-class"
  data-test-id="cf-ui-icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;
